Creat partea de front + bug fixes